app/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - dashboard.infra.adeptmind.net
  - app
  http:
  - name: primary
    route:
    - destination:
        host: stable
      weight: 100
    - destination:
        host: canary
      weight: 0
